--- a/signup.html
+++ b/signup.html
@@ -14,7 +14,7 @@
     }
     .container{
       width: 100%;
-      height: 100vh;
+      min-height: 100vh;
       display: flex;
       flex-flow: row wrap;
       align-content: center;
